--- a/project/project.csproj
+++ b/project/project.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="RestSharp" Version="108.0.1" />
   </ItemGroup>
 
