add new features: location and video

--- a/project/.env
+++ b/project/.env
@@ -8,6 +8,12 @@ MESSAGE_TEXT=Oi eu sou o a mensagem da API do fefe Medici!!!!
 #
 IMG_URL=https://i.ytimg.com/vi/m4TqRtqjvX4/maxresdefault.jpg
 
+
+ADDRESS=ABC company \n Sixth floor , office 38
+
+
+VIDEO_URL=https://file-example.s3-accelerate.amazonaws.com/video/test.mp4
+
 #
 IMG_TEXT=MEUS AMIGOS!!!
 
